[P4][SAVE] add a restore mode to the game

--- a/TODO
+++ b/TODO
@@ -8,3 +8,7 @@ IA :
  - function that compute the max for the Player
  - use the check function has weight function / 1 if it's close to a nother
    same token 0 if it's lonely -1.  5 if it's a win strike
+
+
+
+   ####### REMAINS SOME BUG for the win part ######
