[P4][README] - add url of the game picture

--- a/README
+++ b/README
@@ -11,3 +11,5 @@ return the position where the token has been put
 # alone => 0
 # bloc => 1
 # align => 1
+
+![ScreenShot](https://github.com/Remydeme/puissance-4/blob/master/game-pic.png)
