--- a/README
+++ b/README
@@ -12,4 +12,4 @@ return the position where the token has been put
 # bloc => 1
 # align => 1
 
-![ScreenShot](https://github.com/Remydeme/puissance-4/blob/master/game-pic.png)
+![Alt text](https://github.com/Remydeme/puissance-4/blob/master/game-pic.png?raw=true "game pic")
