--- a/README
+++ b/README
@@ -1,4 +1,34 @@
-# Puissance 4 game
+[![<ORG_NAME>](https://circleci.com/gh/Alvarios/s3-provider.svg?style=svg)](https://github.com/Remydeme/puissance-4/)
 
-## Algorithme for use for implement IA:
- ### ->MinMAx algorithme
+# Tic Tac Toe with MinMax AI
+
+play TicTacToe game again an AI. the AI have four levels. 
+
+## Installation
+
+
+
+
+## Usage
+
+You need to first set the config.ENV.json file in the config directory 
+```c
+
+
+```
+
+
+Next you just have to start the service with the Makefile 
+```bash
+make run 
+```
+
+This command will create a go.mod file and install all the dependencies. Then it will start the server on the Port. 
+
+## Contributing
+Pull requests are welcome. For major changes, please open an issue first to discuss what you would like to change.
+
+Please make sure to update tests as appropriate.
+
+## License
+[MIT](https://choosealicense.com/licenses/mit/)
